--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
     "gridfs-stream": "^1.1.1",
+    "imgur": "^2.4.2",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.9.2",
