--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "paypal-rest-sdk": "^1.8.1",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.0.0",
