--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer-gridfs-storage": "^5.0.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "otp-generator": "^4.0.1",
     "paypal-rest-sdk": "^1.8.1",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.0.0",
